Adding Additional Steps

--- a/install-all-dependencies.yml
+++ b/install-all-dependencies.yml
@@ -1,7 +1,6 @@
 # This is a YAML file to install nginx onto oue web VM using YAML
 ---
 
-
 - hosts: db
 
   gather_facts: yes
@@ -27,8 +26,8 @@
   - name: Insert multiple lines and Backup
     blockinfile:
       path: /etc/mongodb.conf
-      backup: yes
       block: |
+        # mongodb.conf
         storage:
           dbPath: /var/lib/mongodb
           journal:
@@ -37,13 +36,10 @@
           destination: file
           logAppend: true
           path: /var/log/mongodb/mongod.log
-
         net:
           port: 27017
           bindIp: 0.0.0.0
-
-
-
+# where do we want to install
 - hosts: web
 
 # get the facts
@@ -58,39 +54,60 @@
   tasks:
   - name: Install nginx
     apt: pkg=nginx state=present
+    become_user: root
 
-  - name: nginx reverse proxy
-    shell: |
-      sudo unlink /etc/nginx/sites-enabled/default
-      cd /etc/nginx/sites-available
-      sudo touch reverse-proxy.conf
-      sudo chmod 666 reverse-proxy.conf
-      echo "server{
-        listen 80;
-        server_name development.local;
-        location / {
-            proxy_pass http://127.0.0.1:3000;
+  - name: Remove nginx deafault file (delete file)
+    file:
+      path: /etc/nginx/sites-enabled/default
+      state: absent
+
+  - name: Touch a file, using symbolic modes to set the permissions (equivalent to 0644)
+    file:
+      path: /etc/nginx/sites-enabled/reverseproxy.conf
+      state: touch
+      mode: '666'
+
+
+  - name: Insert multiple lines and Backup
+    blockinfile:
+      path: /etc/nginx/sites-enabled/reverseproxy.conf
+      block: |
+        server{
+          listen 80;
+          server_name development.local;
+          location / {
+              proxy_pass http://127.0.0.1:3000;
+          }
         }
-      }" >> reverse-proxy.conf
-      sudo ln -s /etc/nginx/sites-available/reverse-proxy.conf /etc/nginx/sites-enabled/reverse-proxy.conf
-      sudo service nginx restart
+  - name: Create a symbolic link
+    file:
+      src: /etc/nginx/sites-enabled/reverseproxy.conf
+      dest: /etc/nginx/sites-available/reverseproxy.conf
+      state: link
+
+  - name: nginx bug workaround
+    shell: |
+      sudo mkdir /etc/systemd/system/nginx.service.d
+        printf "[Service]\nExecStartPost=/bin/sleep 0.1\n" | \
+          sudo tee /etc/systemd/system/nginx.service.d/override.conf
+      sudo systemctl daemon-reload
+      sudo systemctl restart nginx
   - name: Install nodejs
     apt: pkg=nodejs state=present
 
   - name: Install NPM
     apt: pkg=npm state=present
 
-  - name: Install NPM modules
-    shell: |
-      npm install -g npm@latest
-      npm install mongoose -y
 # Downloading pm2
   - name: Install pm2
     npm:
       name: pm2
       global: yes
 
-
+  - name: download latest npm
+    shell: |
+      npm install -g npm@latest
+      npm install mongoose -y
   - name: set up app
     shell: |
       cd app/
@@ -100,3 +117,4 @@
       pm2 start app.js
     environment:
       DB_HOST: mongodb://vagrant@192.168.33.11:27017/posts?authSource=admin
+    become_user: root
