--- a/vagrantfile
+++ b/vagrantfile
@@ -46,7 +46,7 @@ Vagrant.configure("2") do |config|
 
     web.vm.network :private_network, ip: "192.168.33.10"
     #   assigning private IP
-    web.vm.provision "shell", inline: set_env({ DB_HOST: "mongodb://vagrant@192.168.33.11:27017/posts" }), privileged: false
+    # web.vm.provision "shell", inline: set_env({ DB_HOST: "mongodb://vagrant@192.168.33.11:27017/posts" }), privileged: false
     config.hostsupdater.aliases = ["development.web"]
     # creating a link called development.web so we can access web page with this link instread of an IP
 
